[tool.poetry]
name = "llm-agent-server"
version = "0.1.0"
description = "An LLM-based agent server for file system operations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
langchain = "^0.1.0"
langchain-core = "^0.1.0"
langchain-google-genai = "^0.0.6"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
mypy = "^1.8.0"
pylint = "^3.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.black]
line-length = 80
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"